books/readarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.books.super.fish`)
      kind: Rule
      priority: 0
      middlewares:
        - name: forward-auth
      services:
        - kind: Service
          name: readarr
          port: 80
          scheme: http
    - match: Host(`readarr.books.super.fish`) && PathPrefix(`/api`)
      kind: Rule
      priority: 50
      services:
        - kind: Service
          name: readarr
          port: 80
          scheme: http
    - match: Host(`readarr.books.super.fish`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 100
      services:
        - kind: Service
          name: authentik
          namespace: authentik
          port: 80
          scheme: http
  tls:
    secretName: readarr.books.super.fish
